# hts-forecast

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
dashboard/: README.md  app.py
dashboard/nginx/: project.conf
hts_forecast/src/: console.py  model.py
notebooks/: 001-EK-EDA.ipynb  002-EK-EDA.ipynb  003-EK-model.ipynb  004-EK-Hierarchy.ipynb  005-EK-hierarchytesting.ipynb  Example_Notebook.ipynb
