[tool.poetry]
name = "hts-forecast"
version = "0.1.0"
description = ""
license = "MIT"
readme = "README.md"
homepage = "https://github.com/sithankanna/hts-forecast"
repository = "https://github.com/sithankanna/hts-forecast"
authors = ["Sithan Kanna <sithankanna@gmail.com>"]
keywords = ["time-series"]


[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
