[tool.poetry]
name = "hts-forecast"
version = "0.1.0"
description = ""
license = "MIT"
readme = "README.md"
homepage = "https://github.com/sithankanna/hts-forecast"
repository = "https://github.com/sithankanna/hts-forecast"
authors = ["Sithan Kanna <sithankanna@gmail.com>"]
keywords = ["time-series"]

[tool.poetry.scripts]
hts-forecast = "hts_forecast.src.console:main"

[tool.poetry.dependencies]
python = "^3.9"
click = "^7.1.2"
pandas = "^1.2.0"
jupyter = "^1.0.0"
ipykernel = "^5.4.2"
nb-black = "^1.0.7"
black = "^20.8b1"
matplotlib = "^3.3.3"
sklearn = "^0.22"

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
